--- a/src/main/resources/templates/produto/alterar.html
+++ b/src/main/resources/templates/produto/alterar.html
@@ -38,22 +38,22 @@
 			
 			<div class="row">
 				<div class="col-md-6 form-grop offset-md-3">
-					<label>Data:</label>
-					<input type="date" class="form-control"  pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" th:field="*{data}">
+					<label>Fabricação:</label>
+					<input type="date" class="form-control"  pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" th:field="*{fabricacao}">
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-md-6 form-grop offset-md-3">
+					<label>Validade:</label>
+					<input type="date" class="form-control"  pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" th:field="*{validade}">
 				</div>
 			</div>
 			
 			<div class="row">
 				<div class="col-md-6 form-grop offset-md-3">
 					<label>Quantidade:</label>
-					<input type="number" class="form-control" placeholder="Ex: 2.000" th:field="*{quantidade}">
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="col-md-6 form-grop offset-md-3">
-					<label>Unidades:</label>
-					<input type="number" step="1" pattern="\d+" class="form-control" th:field="*{unidade}">
+					<input type="number" class="form-control" placeholder="Quantidade" th:field="*{quantidade}"  step="0.010">
 				</div>
 			</div>
 			
