--- a/src/main/resources/templates/produto/produtosFrangos.html
+++ b/src/main/resources/templates/produto/produtosFrangos.html
@@ -23,9 +23,9 @@
 			<thead>
 				<th scope="col">Nome</th>
 				<th scope="col">Codigo</th>
-				<th scope="col">Data</th>
+				<th scope="col">Fabricação</th>
+				<th scope="col">Validade</th>
 				<th scope="col">Quantidade</th>
-				<th scope="col">Unidade</th>
 				<th scope="col">Tipo</th>
 				<th scope="col">Ação</th>
 				
@@ -35,9 +35,9 @@
 					
 					<td th:text="${produtos.nome}"></td>
 					<td th:text="${produtos.codigo}"></td>
-					<td th:text="${produtos.data}"></td>
+					<td th:text="${produtos.fabricacao}"></td>
+					<td th:text="${produtos.validade}"></td>
 					<td th:text="${produtos.quantidade}"></td>
-					<td th:text="${produtos.unidade}"></td>
 					<td th:text="${produtos.tipo}"></td>
 					
 					<td>
